# email-parser

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: docs.yaml
src/: error.rs  extracted.rs  lib.rs  parser.rs  types.rs
tests/: extracted_test.rs  parser_test.rs  types_test.rs
