[package]
name = "email-parser"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
description = "Intelligent email parsing with structured type extraction"
repository = "https://github.com/LeakIX/email-parser"

[dependencies]
mailparse = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
tracing = "0.1.40"
regex = "1.11"
once_cell = "1.20"

[dev-dependencies]
tokio-test = "0.4"
