[package]
name = "email-extract"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"
license = "MIT"
description = "Intelligent email parsing with structured type extraction"
repository = "https://github.com/LeakIX/email-extract"
documentation = "https://docs.rs/email-extract"
readme = "README.md"
keywords = ["email", "parser", "extraction", "mime", "rfc5322"]
categories = ["email", "parser-implementations"]

[dependencies]
mailparse = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
tracing = "0.1.40"
regex = "1.11"

[dev-dependencies]
tokio-test = "0.4"

[lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
